css fixes and menu changes

--- a/public/assets/css/blog.css
+++ b/public/assets/css/blog.css
@@ -105,6 +105,7 @@ a {
     color: #fff;
     background: #999;
     font-size: 80%;
+    white-space: nowrap;
 }
     .article-category-design {
         background: #5aba59;
