Text updates Port and DB settings to options.json Description support in articles

--- a/public/assets/css/pricing.css
+++ b/public/assets/css/pricing.css
@@ -44,7 +44,7 @@ p {
  * vertically center the text.
  */
 .banner {
-    background: transparent url('../img/code.jpg') 0 0 repeat-y fixed;
+    background: transparent url('../img/code.png') 0 0 repeat-y fixed;
     text-align: center;
     background-size: 100%;
     width: 100%;
