Mobile layout improvements by @ymaz

--- a/public/assets/css/blog.css
+++ b/public/assets/css/blog.css
@@ -5,194 +5,200 @@
 }*/
 
 a {
-    text-decoration: none;
-    color: rgb(142, 142, 214);
-}
+	text-decoration: none;
+	color: rgb(142, 142, 214);
+	}
 
 /* LAYOUT CSS */
 #layout {
-    padding-left: 200px; /* "left col (nav + list)" width */
-    position: relative;
-}
+	padding-left: 200px; /* "left col (nav + list)" width */
+	position: relative;
+	}
 
 
 
 .brand-title,
 .brand-tagline {
-    margin: 0;
-}
+	margin: 0;
+	}
 .brand-title {
-    text-transform: uppercase;
-    font-size:1.5em;
-    font-weight: 400;
-    padding-top: .4em;
-}
+	text-transform: uppercase;
+	font-size:1.5em;
+	font-weight: 400;
+	padding-top: .4em;
+	}
 .brand-tagline {
-    font-weight: 300;
-    color: rgb(142, 142, 214);
-}
-
-.nav-list {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-.nav-item {
-    display: block;
-
-}
-.nav-item a {
-    display: block;
-    background: transparent;
-    border: 3px solid rgb(103, 103, 180);
-    color: #fff;
-    margin-top: 1em;
-}
-.nav-item a:hover,
-.nav-item a:focus {
-    border: 3px solid rgb(142, 142, 214);
-    color: rgb(142, 142, 214);
-    text-decoration: none;
-}
-
-.content-subhead {
-    text-transform: uppercase;
-    color: #aaa;
-    border-bottom: 1px solid #eee;
-    padding: 0.4em 0;
-    font-size: 80%;
-    font-weight: 500;
-    letter-spacing: 0.1em;
-}
-
-.content {
-    padding: 2em 3em 0;
-    margin-top:38px;
-}
-
-    .content.aritcle {
-        margin-top:10px;
-
-    }
-
-.post {
-    padding-bottom: 2em;
-}
-.article-title {
-    font-size: 2em;
-    color: #222;
-    margin-bottom: 0.2em;
-}
-.article-avatar {
-    border-radius: 50px;
-    float: right;
-    margin-left: 1em;
-}
-.article-description {
-    color: #444;
-    line-height: 1.8em;
-}
-.article-meta {
-    color: #999;
-    font-size: 90%;
-    margin: 0;
-}
-
-.article-category {
-    margin: 0 0.1em;
-    padding: 0.3em 1em;
-    color: #fff;
-    background: #999;
-    font-size: 80%;
-    white-space: nowrap;
-}
-    .article-category-design {
-        background: #5aba59;
-    }
-    .article-category-pure {
-        background: #4d85d1;
-    }
-    .article-category-yui {
-        background: #8156a7;
-    }
-    .article-category-js {
-        background: #df2d4f;
-    }
-
-.article-images {
-    margin: 1em 0;
-}
-.article-image-meta {
-    margin-top: -3.5em;
-    margin-left: 1em;
-    color: #fff;
-    text-shadow: 0 1px 1px #333;
-}
-
-.footer {
-    text-align: center;
-    padding: 1em 0;
-}
-	.footer a {
-	    color: #ccc;
+	font-weight: 300;
+	color: rgb(142, 142, 214);
 	}
 
-	.footer .pure-menu a:hover,
-	.footer .pure-menu a:focus {
-	    background: none;
+.nav-list {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	}
+.nav-item {
+	display: block;
+
+	}
+.nav-item a {
+	display: block;
+	background: transparent;
+	border: 3px solid rgb(103, 103, 180);
+	color: #fff;
+	margin-top: 1em;
+	}
+.nav-item a:hover,
+.nav-item a:focus {
+	border: 3px solid rgb(142, 142, 214);
+	color: rgb(142, 142, 214);
+	text-decoration: none;
+	}
+
+.content-subhead {
+	text-transform: uppercase;
+	color: #aaa;
+	border-bottom: 1px solid #eee;
+	padding: 0.4em 0;
+	font-size: 80%;
+	font-weight: 500;
+	letter-spacing: 0.1em;
+	}
+
+.content {
+	padding: 2em 3em 0;
+	margin-top:38px;
+	}
+
+.content.aritcle {
+	margin-top:10px;
+
+	}
+
+.post {
+	padding-bottom: 2em;
+	}
+.article-title {
+	font-size: 2em;
+	color: #222;
+	margin-bottom: 0.2em;
+	}
+.article-avatar {
+	border-radius: 50px;
+	float: right;
+	margin-left: 1em;
+	}
+.article-description {
+	color: #444;
+	line-height: 1.8em;
+	}
+.article-meta {
+	color: #999;
+	font-size: 90%;
+	margin: 0;
+	}
+
+.article-category {
+	margin: 0 0.1em;
+	padding: 0.3em 1em;
+	color: #fff;
+	background: #999;
+	font-size: 80%;
+	white-space: nowrap;
+	}
+.article-category-design {
+	background: #5aba59;
+	}
+.article-category-pure {
+	background: #4d85d1;
+	}
+.article-category-yui {
+	background: #8156a7;
+	}
+.article-category-js {
+	background: #df2d4f;
+	}
+
+.article-images {
+	margin: 1em 0;
+	}
+.article-image-meta {
+	margin-top: -3.5em;
+	margin-left: 1em;
+	color: #fff;
+	text-shadow: 0 1px 1px #333;
+	}
+
+.about-us_btn {
+	text-align: center;
+	}
+
+.footer {
+	text-align: center;
+	padding: 1em 3em;
+	}
+.footer a {
+	color: #ccc;
+	}
+
+.footer .pure-menu a:hover,
+.footer .pure-menu a:focus {
+	background: none;
 	}
 
 @media (max-width: 767px) {
-    .sidebar {
-        width: 100%;
-        position: relative;
-        margin: 0;
-    }
+	.sidebar {
+		width: 100%;
+		position: relative;
+		margin: 0;
+		}
 
-    .header {
-        text-align: center;
-        top: auto;
-        margin: 3em auto;
-        position: static;
-    }
+	.content {
+		padding: 0.5em 1.5em;
+		margin-top: 0;
+		}
 
-    #layout {
-        padding: 0;
-    }
+	.header {
+		text-align: center;
+		top: auto;
+		margin: 3em auto;
+		position: static;
+		}
 
-    .user-login {
-        border-left:0;
-    }
+	#layout {
+		padding: 0;
+		}
 
-    .sidebar-header {
-        margin: 70px 0 0 0;
+	.user-login {
+		border-left:0;
+		}
 
-    }
 
-    .pure-form.main-search .pure-button {
-        top: -48px;
-    }
-}
+	.pure-form.main-search .pure-button {
+		top: -48px;
+		}
+	}
 
 @media (max-width: 480px) {
-    .content {
-        padding: 2em 1em 0;
-    }
+	.content {
+		padding: 0.5em;
+		}
 
-    .pure-form.main-search .pure-button {
-        top: -76px;
-    }
+	.l-box {
+		padding: 0.5em .5em;
+		}
 
-    .user-login {
-        width:100%;
-        border-bottom: 1px solid darkgrey;
-        text-align: center;
-    }
-
-    .sidebar-header {
-        margin: 108px 0 0 0;
+	.pure-form.main-search .pure-button {
+		top: -76px;
+		}
 
 
-    }
+	.article-title {
+		font-size: 1.5em;
+		letter-spacing: normal;
+		}
 
-}
+	.about-us_btn {
+		font-size:1.25em;
+		}
+	}
