Add localization support and remove hard-coded text values, add new backgrounds to banner, colorize positive/negative/neutral votes

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -116,6 +116,7 @@ a {
 
 .article-rating.positive {color:rgb(28, 184, 65);}
 .article-rating.negative {color:rgb(202, 60, 60);}
+.article-rating.neutral {color:#999}
 
 
 
