Auth screen enchancements indexJson refactorings and caching

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -125,8 +125,10 @@ a {
 	right: 13px;
 	font-size: 2em;
 	color: #A9A9A9;
-
 	}
+    .pure-form.main-search .pure-button:active {
+        box-shadow: none;
+        }
 
 /* /HOMEPAGE SEARCH */
 
