--- a/public/assets/css/pure.css
+++ b/public/assets/css/pure.css
@@ -809,11 +809,11 @@ a.pure-button-selected {
     text-align: right;
     display: inline-block;
     vertical-align: middle;
-    width: 10em;
-    margin: 0 1em 0 0;
+    width: 120px;
+    margin: 0 10px 0 0;
 }
 .pure-form-aligned .pure-controls {
-    margin: 1.5em 0 0 10em;
+    margin: 1.5em 0 0 135px;
 }
 
 /* Rounded Inputs */
