--- a/public/assets/css/jquery.autoSuggest.css
+++ b/public/assets/css/jquery.autoSuggest.css
@@ -1,7 +1,7 @@
 .ms-ctn{
     position: relative;
-    padding: 0 30px 3px 0;
-    margin-bottom: 0px;
+    padding: 0 30px 0 0;
+    margin-bottom: 0;
     font-size: 14px;
     line-height: 20px;
     color: #555555;
@@ -45,15 +45,13 @@
     -webkit-transition: none;
     outline: none;
     display: block;
-    padding: 4px 6px;
     line-height: normal;
     overflow: hidden;
     height: auto;
     border-radius: 0;
     float: left;
-    margin: 2px 0 2px 2px;
 	width: 150px !important;
-	font-size: 12px;
+	font-size: 13px;
 }
 .ms-ctn-disabled input{
     cursor: not-allowed;
@@ -115,7 +113,7 @@
     border-radius: 3px;
     border: 1px solid #CCC;
     left: -1px;
-	top: 3px;
+	top: 0;
     -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
     -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
