--- a/public/assets/css/form.css
+++ b/public/assets/css/form.css
@@ -6,13 +6,14 @@
 .form-errors,
 .form-success {
 	display: none;
-	margin-top: 30px;
-	text-align: center;
+	margin-top: 20px;
+    line-height: 1.5;
+    margin-left: 135px;
+    font-size: 14px;
 	}
 
 .form-success {
-	font-size: 12px;
-	color: #1daa09;
+	color: #749E6E;
 	}
 
 .spinner {
